# trackdoor

./: .prettierignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: integrate.yml
src/: App.css  App.tsx  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: Button.tsx  Map.tsx  Overlay.tsx  Toolbar.tsx  index.ts
src/components/button/: button.css  button.tsx
src/components/file/: file.css  file.tsx
src/components/overlay/: overlay.css  overlay.tsx
src/components/sidebar/: sidebar.css  sidebar.tsx
src/components/toolbar/: toolbar.css  toolbar.tsx
src/types/: types.ts
